cert-manager/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: web
      port: 80 # intern
      targetPort: 80 # container
