cert-manager/ingress_tls_prod.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: kuard
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nginx-stg.mario21ic.net
    secretName: quickstart-example-tls
  rules:
  - host: nginx-stg.mario21ic.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
